# Flying-Crocodile

server/: .env.example  .env.test  .gitignore  Cargo.toml  Makefile  diesel.toml
server/migrations/2024-10-30-014417_create_gallery/: up.sql
server/migrations/2024-11-01-141702_add_isFolder/: down.sql  up.sql
server/migrations/2024-11-01-145626_rename_fields/: down.sql  up.sql
server/migrations/2024-11-01-214559_create_root_folders/: down.sql  up.sql
server/migrations/2024-12-03-195415_create_tables/: up.sql
server/migrations/2024-12-09-021758_database_setup/: down.sql  up.sql
server/src/: db.rs  lib.rs  main.rs  models.rs  routes.rs  schema.rs  utils.rs
server/src/config/: constants.rs  logging.rs
server/src/graphql/: create_schema.rs  loaders.rs  mod.rs  schema.rs
server/src/graphql/mutation/: category_mutations.rs  entry_mutation.rs  mod.rs
server/src/graphql/mutations/: entry_mutation.rs  mod.rs
server/src/graphql/queries/: mod.rs
server/src/handlers/: entries.rs  graphql.rs  health_check.rs  mod.rs
server/src/models/: auth.rs  mod.rs
server/src/routes/: auth_routes.rs  graphql_routes.rs  health.rs  mod.rs
server/src/services/: mod.rs
server/src/state/: app_state.rs  cache.rs  config.rs  mod.rs  session_store.rs
server/src/utils/: ensure_root_folders.rs  env.rs  get_app_state.rs  mod.rs  setup_limiter.rs
server/tests/: mod.rs  rate_limiter_test.rs
server/tests/helper_functions/: db.rs  load_graphql.rs  mod.rs
server/tests/queries/: get_entries.rs  get_roots.rs  mod.rs
server/tests/routes/: health_check.rs  mod.rs
(+194 files in other folders)
