[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
diesel = { version = "2.2.0", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
async-graphql = "7.0.11"
async-graphql-actix-web = "7.0.11"
actix-cors = "0.7.0"
log = "0.4.22"
env_logger = "0.11.5"
