[package]
name = "my_project"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
diesel = { version = "2.2.0", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
async-graphql = {version = "7.0.11", features = ["dataloader"]}
async-graphql-actix-web = "7.0.11"
actix-cors = "0.7.0"
log = "0.4.22"
env_logger = "0.11.5"
validator = { version = "0.19.0", features = ["derive"] }
tokio = { version = "1.41.1", features = ["full"] }
diesel_migrations = "2.2.0"
actix-governor = "0.7.0"
url = "2.5.4"
rand = "0.8.5"
reqwest = { version = "0.12.9", features = ["json"] }
